--- a/frontend/src/app/app.scss
+++ b/frontend/src/app/app.scss
@@ -19,3 +19,19 @@
         cursor: pointer;
     }
 }
+
+@keyframes slide-up {
+    from {
+      opacity: 0;
+      transform: translateY(10px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  .animate-slide-up {
+    animation: slide-up 0.2s ease-out;
+  }
+  
