--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -73,7 +73,7 @@
               </li>
               <li>
                 <button
-                  (click)="confirmDeleteAccount()"
+                  (click)="openModal(true)"
                   class="w-full text-left block px-4 py-2 hover:bg-gray-100 text-red-600 cursor-pointer"
                 >
                   <i class="fa-solid fa-user-slash me-2 text-xs"></i> Delete account
@@ -93,3 +93,44 @@
   <ng-template #loginTemplate>
     <router-outlet></router-outlet>
   </ng-template>
+
+  
+  <!-- Modal (géré par Angular CDK Overlay) -->
+  <ng-template #modalTemplate>
+    <div class="relative bg-white rounded-xl shadow-lg w-[90%] md:w-[400px] p-6">
+      <button
+        type="button"
+        (click)="closeModal()"
+        class="absolute top-3 right-3 text-gray-500 hover:text-gray-800 cursor-pointer"
+      >
+        <i class="fa-solid fa-xmark"></i>
+      </button>
+  
+      <div class="flex gap-2 mb-3 items-center">
+        <i class="fa-solid text-xl fa-triangle-exclamation text-red-500"></i>
+        <h2 class="text-lg font-bold">Delete Account</h2>
+      </div>
+  
+      <div>
+
+        <p>Are you sure you want to permanently delete your account? <span class="text-red-400">This action cannot be undone.</span></p>
+
+        <div class="flex justify-end gap-2 mt-4">
+          <button
+            type="button"
+            class="px-4 py-2 rounded-lg bg-gray-300 hover:bg-gray-400 transition cursor-pointer"
+            (click)="closeModal()"
+          >
+            Cancel
+          </button>
+          <button
+            type="submit"
+            class="px-4 py-2 rounded-lg bg-red-500 text-white hover:bg-red-700 transition cursor-pointer"
+          >
+            Confirm
+          </button>
+        </div>
+      </div>
+    </div>
+  </ng-template>
+  
