--- a/frontend/src/app/components/new-transaction/new-transaction.html
+++ b/frontend/src/app/components/new-transaction/new-transaction.html
@@ -38,7 +38,7 @@
     <button
       type="button"
       (click)="closeModal()"
-      class="absolute top-3 right-3 text-gray-500 hover:text-gray-800"
+      class="absolute top-3 right-3 text-gray-500 hover:text-gray-800 cursor-pointer"
     >
       <i class="fa-solid fa-xmark"></i>
     </button>
@@ -77,14 +77,14 @@
       <div class="flex justify-end gap-2 mt-4">
         <button
           type="button"
-          class="px-4 py-2 rounded-lg bg-gray-300 hover:bg-gray-400 transition"
+          class="px-4 py-2 rounded-lg bg-gray-300 hover:bg-gray-400 transition cursor-pointer"
           (click)="closeModal()"
         >
           Cancel
         </button>
         <button
           type="submit"
-          class="px-4 py-2 rounded-lg bg-blue-500 text-white hover:bg-blue-700 transition"
+          class="px-4 py-2 rounded-lg bg-blue-500 text-white hover:bg-blue-700 transition cursor-pointer"
         >
           Save
         </button>
