--- a/frontend/src/app/components/graph-component/graph-component.html
+++ b/frontend/src/app/components/graph-component/graph-component.html
@@ -1,5 +1,8 @@
-<canvas baseChart
-        [data]="chartData"
-        [options]="chartOptions"
-        [type]="'bar'">
-</canvas>
+<div class="w-full h-96">
+        <canvas baseChart
+                [data]="chartData"
+                [options]="chartOptions"
+                [type]="'bar'"
+                class="w-full h-full">
+        </canvas>
+</div>
