--- a/frontend/src/app/components/stats-component/stats-component.html
+++ b/frontend/src/app/components/stats-component/stats-component.html
@@ -1,35 +1,17 @@
-<div class="flex flex-col h-[32rem] gap-3">
-    <div class="flex h-[50%] gap-3">
-        <div class="basis-4/6 rounded-xl p-5 shadow-md bg-white">
+<div class="flex flex-col h-[100%] gap-3">
+    <div class="flex h-[100%] gap-3">
+        <!-- Graphique à gauche -->
+        <div class="basis-3/6 rounded-xl p-5 shadow-md bg-white">
             <app-graph-component [myData]="realData"/>
         </div>
-        <div class="basis-2/6 p-5 rounded-xl shadow-md bg-white">
-            <h2 class="font-bold mb-2">Filter</h2>
-            <h3 class="mb-2 text-sm font-normal">Time...</h3>
-            <a href="#" class="rounded-3xl bg-blue-500 text-white p-2 text-xs me-2">Annual</a>
-            <a href="#" class="rounded-3xl bg-zinc-200 hover:bg-blue-500 hover:text-white p-2 text-xs me-2 duration-300 ease-in-out">Monthly</a>
-            <a href="#" class="rounded-3xl bg-zinc-200 p-2 text-xs me-2 hover:bg-blue-500 hover:text-white duration-500 ease-in-out">Daily</a>
-            <a href="#" class="rounded-3xl bg-zinc-200 hover:bg-blue-500 hover:text-white p-2 text-xs me-2 duration-300 ease-in-out">All</a>
-
-            <h3 class="mt-5 mb-2 text-sm font-normal">Variables</h3>
-            <a href="#" class="rounded-3xl bg-zinc-200 hover:bg-blue-500 hover:text-white p-2 text-xs me-2 duration-300 ease-in-out">Solde</a>
-            <a href="#" class="rounded-3xl bg-blue-500 text-white p-2 text-xs me-2 ">Expense</a>
-            <a href="#" class="rounded-3xl bg-zinc-200 p-2 text-xs me-2 hover:bg-blue-500 hover:text-white duration-500 ease-in-out">Economie</a>
-            <a href="#" class="rounded-3xl bg-zinc-200 hover:bg-blue-500 hover:text-white p-2 text-xs me-2 duration-300 ease-in-out">All</a>
-        </div>
-    </div>
-    
-    <div class="rounded-xl h-[50%] bg-white shadow-md py-2 px-5 bg-blue-500">
-        <h2 class="font-bold mb-2">All transactions</h2>
-        <app-status-filter 
-            [transactions]="transactions"
-            (filteredTransactions)="onFilteredTransactions($event)"
-        />
-        <div class="overflow-y-scroll bg-blue-50 pt-0 h-[150px] rounded">
-            <app-transaction-item-component 
-                [transactions]="filteredTransactions"
-            (transactionIdToDelete)="onDeleteTransaction($event)"
-            
+        
+        <!-- Filtres à droite -->
+        <div class="basis-3/6 p-5 rounded-xl shadow-md bg-white">
+            <h2 class="font-bold mb-2">Filtres</h2>
+            <app-graph-filters 
+                [myData]="realData"
+                (scaleChange)="onScaleChange($event)"
+                (resetScaleEvent)="onResetScale()"
             />
         </div>
     </div>
