--- a/frontend/src/app/components/signup/signup.html
+++ b/frontend/src/app/components/signup/signup.html
@@ -83,7 +83,7 @@
       </i>
     </div>
   
-    <button type="submit" class="bg-blue-500 rounded-xl p-3 mb-3 text-white">
+    <button type="submit" class="bg-blue-500 cursor-pointer rounded-xl p-3 mb-3 text-white">
       Sign up
     </button>
 
