--- a/frontend/src/app/components/new-transaction/new-transaction.html
+++ b/frontend/src/app/components/new-transaction/new-transaction.html
@@ -1,14 +1,14 @@
 @if(isTypeNormal()) {
   <div class="normal">
     <button
-      class="me-3 rounded-[2em] px-4 py-1 bg-green-700 text-white hover:bg-blue-700 transition duration-700 ease-in-out"
+      class="me-3 rounded-[2em] cursor-pointer px-4 py-1 bg-green-700 text-white hover:bg-blue-700 transition duration-700 ease-in-out"
       (click)="openModal(true)"
     >
       Income
     </button>
   
     <button
-      class="rounded-[2em] px-4 py-1 bg-red-700 text-white hover:bg-red-900 transition duration-700 ease-in-out"
+      class="rounded-[2em] cursor-pointer px-4 py-1 bg-red-700 text-white hover:bg-red-900 transition duration-700 ease-in-out"
       (click)="openModal(false)"
     >
       Outcome
