--- a/frontend/src/app/components/mini-card/mini-card.html
+++ b/frontend/src/app/components/mini-card/mini-card.html
@@ -1,7 +1,15 @@
-<div class="w-[100%] h-[100%] flex flex-row py-2 items-center px-3">
-    <i class="text-xl {{ miniCard.iconClass }} me-4"></i>
-    <div class="flex flex-col">
-        <h2 class="w-[100%] text-xs text-gray-700">{{ miniCard.title }}</h2>
-        <p class="w-[100%] font-bold text-zinc-600 text-lg">Ar {{  miniCard.amount | number:'1.2-2' }}</p>
+@if(myCard) {
+    <div class="w-[100%] h-[100%] flex flex-row py-2 items-center px-3">
+        <i class="text-xl {{ myCard.iconClass }} me-4"></i>
+        <div class="flex flex-col">
+            <h2 class="w-[100%] text-xs text-gray-700">{{ myCard.title }}</h2>
+            <p class="w-[100%] font-bold text-zinc-600 text-lg">Ar {{  myCard.amount | number:'1.2-2' }}</p>
+        </div>
     </div>
-</div>
+} @else {
+    <div class="w-[100%] h-[100%] flex justify-center items-center">
+        <!-- spinner -->
+        <div class="animate-spin rounded-full h-8 w-8 border-4 border-blue-500 border-t-transparent"></div>
+        <span class="ml-2 text-sm text-zinc-600">Loading...</span>
+    </div>
+}
