--- a/frontend/src/app/components/new-transaction/new-transaction.html
+++ b/frontend/src/app/components/new-transaction/new-transaction.html
@@ -56,6 +56,8 @@
     }
 
     <form [formGroup]="transactionForm" (ngSubmit)="submitForm()">
+      <p *ngIf="errorTransaction" class="bg-red-100 text-red-600 p-3 rounded-md mb-5 text-sm">Something went wrong :(</p>
+      
       <div class="mb-3">
         <label class="block text-sm mb-1 font-medium">Amount</label>
         <input
@@ -63,6 +65,14 @@
           formControlName="amount"
           class="w-full border rounded-lg px-3 py-2 outline-none focus:ring-2 focus:ring-blue-400"
         />
+
+        <p *ngIf="transactionForm.get('amount')?.hasError('required') && transactionForm.get('amount')?.touched" class="text-red-500 text-sm">
+          Amount is required
+        </p>
+
+        <p *ngIf="transactionForm.get('amount')?.hasError('min') && transactionForm.get('amount')?.touched" class="text-red-500 text-sm">
+          Minimum is 100
+        </p>
       </div>
 
       <div class="mb-3">
@@ -72,6 +82,10 @@
           formControlName="reason"
           class="w-full border rounded-lg px-3 py-2 outline-none focus:ring-2 focus:ring-blue-400"
         />
+
+        <p *ngIf="transactionForm.get('reason')?.hasError('required') && transactionForm.get('reason')?.touched" class="text-red-500 text-sm">
+          Amount is required
+        </p>
       </div>
 
       <div class="flex justify-end gap-2 mt-4">
@@ -84,9 +98,15 @@
         </button>
         <button
           type="submit"
-          class="px-4 py-2 rounded-lg bg-blue-500 text-white hover:bg-blue-700 transition cursor-pointer"
+          class="px-4 py-2 rounded-lg bg-blue-500 text-white hover:bg-blue-700 transition cursor-pointer" [disabled]="sendTransaction"
         >
+        <!-- Save -->
+        @if(!sendTransaction) {
           Save
+        } @else {
+          <div class="animate-spin rounded-full h-6 w-6 border-4 border-white border-t-transparent"></div>
+        }
+        
         </button>
       </div>
     </form>
