--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -144,8 +144,14 @@
         <button type="submit"
                 class="px-4 py-2 rounded-lg bg-red-500 text-white hover:bg-red-700 transition cursor-pointer"
                 (click)="confirmDeleteAccount()"
+                [disabled]="confirm"
                 >
-          Confirm
+          <!-- confirm -->
+          @if(!confirm) {
+            Confirm
+          } @else {
+            <div class="animate-spin rounded-full h-6 w-6 border-4 border-white border-t-transparent"></div>
+          }
         </button>
       </div>
     </div>
