--- a/frontend/src/app/components/transaction-item-component/transaction-item-component.html
+++ b/frontend/src/app/components/transaction-item-component/transaction-item-component.html
@@ -1,38 +1,47 @@
 @if(filteredTransactions) {
-    <div class="container gap-1 rounded">
-        <table class="w-[100%]">
-          <thead class="text-xs bg-blue-200 text-zinc-700 border-b-1 border-zinc-300">
+  <div class="container gap-1 rounded">
+      <table class="w-[100%]">
+        <thead class="text-xs bg-blue-200 text-zinc-700 border-b-1 border-zinc-300">
+          @if(analysis()) {
+            <th class="font-bold p-2">Somme: {{ formattedSum }} Ar</th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+          } @else {
             <th class="font-bold p-2">Amount</th>
             <th class="font-bold">Reason</th>
             <th class="font-bold">Date</th>
             <th class="font-bold">Status</th>
             <th></th>
-          </thead>
-      
-          <tbody class="overflow-y-scroll">
-            @for (transaction of filteredTransactions; track $index) {
-              <tr class="border-zinc-300 text-xs border-b-1">
-                <td class="p-2">Ar {{ transaction.amount }}</td>
-                <td>{{ transaction.reason | titlecase }}</td>
-                <td>{{ transaction.date | date: 'dd MMMM yyyy, hh:mm a' }}</td>
-                @if (transaction.is_in) {
-                  <td class="flex items-center py-2">
-                    <small class="w-[50px] text-white inline-block px-3 text-xs bg-green-700 rounded-3xl text-center">In</small>
-                  </td>
-                } @else {
-                  <td>
-                    <small class="w-[50px] text-white inline-block px-3 text-xs bg-red-700 rounded-3xl text-center">Out</small>
-                  </td>
-                }
+          }
+        </thead>
+    
+        <tbody class="overflow-y-scroll">
+          @for (transaction of filteredTransactions; track $index) {
+            <tr class="border-zinc-300 text-xs border-b-1">
+              <td class="p-2"> <input *ngIf="analysis()" (change)="calculate($event)" class="me-2 cursor-pointer" type="checkbox" name="money" [id]="transaction.id" [value]="transaction.amount"> Ar {{ transaction.amount }}</td>
+              <td>{{ transaction.reason | titlecase }}</td>
+              <td>{{ transaction.date | date: 'dd MMMM yyyy, hh:mm a' }}</td>
+              @if (transaction.is_in) {
+                <td class="flex items-center py-2">
+                  <small class="w-[50px] text-white inline-block px-3 text-xs bg-green-700 rounded-3xl text-center">In</small>
+                </td>
+              } @else {
+                <td>
+                  <small class="w-[50px] text-white inline-block px-3 text-xs bg-red-700 rounded-3xl text-center">Out</small>
+                </td>
+              }
 
-                <td><i (click)="deleteTransaction(transaction.id)" class="fa-solid fa-trash text-red-700 text-sm cursor-pointer"></i></td>
-              </tr>
-            } @empty {
-              <p class="py-1 px-2 text-sm italic">You have no transaction</p>
-            }
-          </tbody>
-        </table>
-    </div>
+              <td><i (click)="deleteTransaction(transaction.id)" class="fa-solid fa-trash text-red-700 text-sm cursor-pointer"></i></td>
+            </tr>
+          } @empty {
+            <p class="py-1 px-2 text-sm italic">You have no transaction</p>
+          }
+        </tbody>
+      </table>
+  </div>
 } @else {
     <div class="w-[100%] h-[100%] flex justify-center items-center py-10">
         <!-- spinner -->
