--- a/frontend/src/app/components/landing-page/landing-page.html
+++ b/frontend/src/app/components/landing-page/landing-page.html
@@ -68,11 +68,14 @@
                 <div class="flex items-center mb-4">
                     <img src="http://static.photos/people/200x200/1" alt="User" class="w-12 h-12 rounded-full mr-4">
                     <div>
-                        <h4 class="font-semibold">Sarah M.</h4>
-                        <p class="text-gray-500 text-sm">Small Business Owner</p>
+                        <h4 class="font-semibold">Notahiana R.</h4>
+                        <p class="text-gray-500 text-sm">Responsable marketing back-office</p>
                     </div>
                 </div>
-                <p class="text-gray-600">"Kajy Vola helped me save 30% more each month by showing me exactly where I was overspending. The visual reports are game-changers!"</p>
+                <p class="text-gray-600">"Izaho taloha ilay karazan'olona tsy manisa vola miala mintsy fa dia mandany fotsiny. 
+                    Avy nampiasa an'ity plateforme ity izaho dia hitako fa kay sakafo anelan'elam-potoana no nandany ny volako . 
+                    Tena tsara le izy satria izao aho lasa manana tahiry ary tratrako amin'izay ny tanjoko hiena nohon'ilay tsy mihinana goûté isak'izay mihetsika.
+                    Atokisana 100%</p>
             </div>
             <div class="bg-white p-8 rounded-xl shadow-md">
                 <div class="flex items-center mb-4">
