--- a/frontend/src/app/components/landing-page/landing-page.html
+++ b/frontend/src/app/components/landing-page/landing-page.html
@@ -73,8 +73,8 @@
                     </div>
                 </div>
                 <p class="text-gray-600">"Izaho taloha ilay karazan'olona tsy manisa vola miala mintsy fa dia mandany fotsiny. 
-                    Avy nampiasa an'ity plateforme ity izaho dia hitako fa kay sakafo anelan'elam-potoana no nandany ny volako . 
-                    Tena tsara le izy satria izao aho lasa manana tahiry ary tratrako amin'izay ny tanjoko hiena nohon'ilay tsy mihinana goûté isak'izay mihetsika.
+                    <br>Avy nampiasa an'ity plateforme ity izaho dia hitako fa kay sakafo anelan'elam-potoana no nandany ny volako . 
+                    <br>Tena tsara le izy satria izao aho lasa manana tahiry ary tratrako amin'izay ny tanjoko hiena nohon'ilay tsy mihinana goûté isak'izay mihetsika.
                     Atokisana 100%</p>
             </div>
             <div class="bg-white p-8 rounded-xl shadow-md">
